<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.trihandayani.studycase.FirstActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical|center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_name"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="56dp"
            android:layout_marginStart="54dp"
            android:text="@string/sub_title"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/title_name"
            app:layout_constraintTop_toBottomOf="@+id/title_name" />



    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/nama-makanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nama_makanan"
            android:inputType="textShortMessage"
            android:textColorHighlight="@color/colorAccent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="169dp" />

        <EditText
            android:id="@+id/jml-makanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/jumlah_porsi"
            android:inputType="number"
            android:textColorHighlight="@color/colorAccent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="232dp" />




        <Button
            android:id="@+id/btn-eatbus"
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:layout_marginStart="26dp"
            android:background="@color/colorAccent"
            android:text="@string/eatbus"
            android:textColor="#ffffff"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="313dp" />

        <Button
            android:id="@+id/btn-abnormal"
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="26dp"
            android:background="@color/colorAccent"
            android:text="@string/abnormal"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn-eatbus"
            tools:layout_editor_absoluteY="313dp" />


    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
